bk_ida/gccida/c3/cleanup_subreg_operands
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3170:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3176:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v4 = recog_data_0.operand_loc[v1]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3183:38: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)( *( _WORD *)recog_data_0.operand[v1] - 66) > 0xCu 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3184:32: error: use of undeclared identifier 'recog_data_0'
|| !_bittest( &v2, *( _DWORD *)recog_data_0.operand[v1] - 66) ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3190:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[v1] = v3; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3194:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( v1 < recog_data_0.n_operands ); 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3196:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_dups > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3201:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v7 = recog_data_0.dup_loc[v5]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3212:2: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*recog_data_0.dup_loc[v5] = v6; 
 ^~~~~~~~~~~~
 recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/final.c:3219:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( v5 < recog_data_0.n_dups ); 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cleanup_subreg_operands/src/obj/final.o] Error 1
